# django_notifications_service

./: db.sqlite3  pyproject.toml
config/: celery.py  settings.py
core/: consumers.py  dataclasses.py  models.py  notification_repository.py  tasks.py  utils.py
core/management/commands/: start_consumer.py
core/migrations/: 0001_initial.py  0002_rename_notification_tye_djangonotificationmodel_notification_type.py
