[tool.poetry]
name = "notifications-service"
version = "0.1.0"
description = "UDS"
authors = ["joelproxi <joeledmond95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
djangorestframework = "^3.15.2"
django-celery-results = "^2.5.1"
kombu = "^5.4.2"
celery = {extras = ["rabbitmq", "redis"], version = "^5.4.0"}
boto3 = "^1.35.87"
twilio = "^9.4.1"
flower = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
